[gd_scene load_steps=6 format=2]

[ext_resource path="res://NESCyrillic.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://cenas/soma.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.282353 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.235294 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[node name="Node2D" type="Node2D"]
visible = false
script = ExtResource( 2 )

[node name="Panel2" type="Panel" parent="."]
margin_left = 361.0
margin_top = 164.0
margin_right = 821.0
margin_bottom = 287.0
custom_styles/panel = SubResource( 3 )

[node name="Label" type="Label" parent="Panel2"]
margin_right = 40.0
margin_bottom = 14.0

[node name="Panel" type="Panel" parent="."]
margin_left = 480.0
margin_top = 193.0
margin_right = 700.0
margin_bottom = 258.0
custom_styles/panel = SubResource( 2 )

[node name="Label" type="Label" parent="Panel"]
margin_left = 60.0
margin_top = -3.0
margin_right = 152.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 1 )
text = "17 + 18"

[node name="35" type="Button" parent="Panel"]
margin_left = 12.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 45.0
text = "35"

[node name="39" type="Button" parent="Panel"]
margin_left = 60.0
margin_top = 26.0
margin_right = 88.0
margin_bottom = 46.0
text = "39"

[node name="1" type="Button" parent="Panel"]
margin_left = 118.0
margin_top = 28.0
margin_right = 138.0
margin_bottom = 48.0
text = "1"

[node name="25" type="Button" parent="Panel"]
margin_left = 168.0
margin_top = 29.0
margin_right = 196.0
margin_bottom = 49.0
text = "25"

[connection signal="pressed" from="Panel/35" to="." method="_on_35_pressed"]
[connection signal="pressed" from="Panel/39" to="." method="_on_39_pressed"]
[connection signal="pressed" from="Panel/1" to="." method="_on_1_pressed"]
