extends Node2D


signal certo


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


func respostaCerta():
	pass

func _on_35_pressed():
	emit_signal("certo")


func _on_39_pressed():
	pass


func _on_1_pressed():
	pass # Replace with function body.
